--- a/plugins/editors/CMakeLists.txt
+++ b/plugins/editors/CMakeLists.txt
@@ -1,6 +1,27 @@
 add_library(editors SHARED)
 
 target_sources(editors
+	PUBLIC
+		"include/codepad/editors/binary/components.h"
+		"include/codepad/editors/binary/contents_region.h"
+
+		"include/codepad/editors/code/caret_set.h"
+		"include/codepad/editors/code/contents_region.h"
+		"include/codepad/editors/code/fragment_generation.h"
+		"include/codepad/editors/code/interpretation.h"
+		"include/codepad/editors/code/line_number_display.h"
+		"include/codepad/editors/code/linebreak_registry.h"
+		"include/codepad/editors/code/minimap.h"
+		"include/codepad/editors/code/theme.h"
+		"include/codepad/editors/code/view.h"
+		"include/codepad/editors/code/view_caching.h"
+
+		"include/codepad/editors/buffer.h"
+		"include/codepad/editors/caret_rendering.h"
+		"include/codepad/editors/caret_set.h"
+		"include/codepad/editors/editor.h"
+		"include/codepad/editors/interaction_modes.h"
+		"include/codepad/editors/manager.h"
 	PRIVATE
 		"src/binary/components.cpp"
 		"src/binary/contents_region.cpp"
