--- a/plugins/tree_sitter/CMakeLists.txt
+++ b/plugins/tree_sitter/CMakeLists.txt
@@ -1,6 +1,13 @@
 add_library(tree_sitter SHARED)
 
 target_sources(tree_sitter
+	PUBLIC
+		"include/codepad/tree_sitter/highlight_iterator.h"
+		"include/codepad/tree_sitter/highlight_layer_iterator.h"
+		"include/codepad/tree_sitter/interpretation_interface.h"
+		"include/codepad/tree_sitter/language_configuration.h"
+		"include/codepad/tree_sitter/query.h"
+		"include/codepad/tree_sitter/wrappers.h"
 	PRIVATE
 		"tree-sitter/lib/src/lib.c"
 		"src/interpretation_interface.cpp"
@@ -9,10 +16,11 @@ target_sources(tree_sitter
 		"src/query.cpp")
 target_link_libraries(tree_sitter PRIVATE codepad_core editors)
 target_include_directories(tree_sitter
+	PUBLIC
+		"include/"
 	PRIVATE
 		"../common/include/"
-		"tree-sitter/lib/include/"
-		"include/")
+		"tree-sitter/lib/include/")
 set_target_properties(tree_sitter
 	PROPERTIES
 		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
