text theme refactoring, more precise modification boundaries

--- a/config/settings.json
+++ b/config/settings.json
@@ -4,7 +4,8 @@
 		"editors",
 		"command_pack",
 		"python_plugin_host_pybind11",
-		"tree_sitter"
+		"tree_sitter",
+		"lsp"
 	],
 	"editor": {
 		"font_size": 12,
