customizable highlight config for lsp

--- a/plugins/editors/test/unit/CMakeLists.txt
+++ b/plugins/editors/test/unit/CMakeLists.txt
@@ -4,7 +4,8 @@ target_sources(editors_test
 	PRIVATE
 		"src/main.cpp"
 		
-		"src/theme.cpp")
+		"src/theme.cpp"
+		"src/theme_configuration.cpp")
 
 find_package(Catch2 CONFIG REQUIRED)
 target_link_libraries(editors_test PRIVATE editors Catch2::Catch2)
