--- a/plugins/editors/CMakeLists.txt
+++ b/plugins/editors/CMakeLists.txt
@@ -40,6 +40,7 @@ target_sources(editors
 		"src/code/interpretation.cpp"
 		"src/code/line_number_display.cpp"
 		"src/code/minimap.cpp"
+		"src/code/theme.cpp"
 
 		"src/buffer.cpp"
 		"src/decoration.cpp"
