update python plugin build script (still maybe broken))

--- a/plugins/python_plugin_host_pybind11/CMakeLists.txt
+++ b/plugins/python_plugin_host_pybind11/CMakeLists.txt
@@ -9,5 +9,6 @@ set_target_properties(python_plugin_host_pybind11
 		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
 		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
 
+find_package(Python3 COMPONENTS Interpreter Development REQUIRED)
 find_package(pybind11 CONFIG REQUIRED)
 target_link_libraries(python_plugin_host_pybind11 PRIVATE pybind11::embed)
