move tree-sitter library into separate target

--- a/plugins/tree_sitter/CMakeLists.txt
+++ b/plugins/tree_sitter/CMakeLists.txt
@@ -1,3 +1,29 @@
+add_library(tree_sitter_lib STATIC)
+
+target_sources(tree_sitter_lib
+	PRIVATE
+		"tree-sitter/lib/src/lib.c"
+
+		"languages/tree-sitter-c/src/parser.c"
+
+		"languages/tree-sitter-cpp/src/parser.c"
+		"languages/tree-sitter-cpp/src/scanner.cc"
+
+		"languages/tree-sitter-css/src/parser.c"
+		"languages/tree-sitter-css/src/scanner.c"
+
+		"languages/tree-sitter-html/src/parser.c"
+		"languages/tree-sitter-html/src/scanner.cc"
+
+		"languages/tree-sitter-javascript/src/parser.c"
+		"languages/tree-sitter-javascript/src/scanner.c"
+
+		"languages/tree-sitter-json/src/parser.c")
+target_include_directories(tree_sitter_lib
+	PUBLIC
+		"tree-sitter/lib/include/")
+
+
 add_library(tree_sitter SHARED)
 
 target_sources(tree_sitter
@@ -10,8 +36,6 @@ target_sources(tree_sitter
 		"include/codepad/tree_sitter/query.h"
 		"include/codepad/tree_sitter/wrappers.h"
 	PRIVATE
-		"tree-sitter/lib/src/lib.c"
-
 		"src/highlight_collector.cpp"
 		"src/highlight_layer_iterator.cpp"
 		"src/interpretation_tag.cpp"
@@ -19,33 +43,13 @@ target_sources(tree_sitter
 		"src/main.cpp"
 		"src/manager.cpp"
 		"src/query.cpp")
-target_link_libraries(tree_sitter PUBLIC codepad_core editors)
+target_link_libraries(tree_sitter PUBLIC codepad_core editors tree_sitter_lib)
 target_include_directories(tree_sitter
 	PUBLIC
 		"include/"
 	PRIVATE
-		"../common/include/"
-		"tree-sitter/lib/include/")
+		"../common/include/")
 set_target_properties(tree_sitter
 	PROPERTIES
 		RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}"
 		LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")
-
-# parsers
-target_sources(tree_sitter
-	PRIVATE
-		"languages/tree-sitter-c/src/parser.c"
-
-		"languages/tree-sitter-cpp/src/parser.c"
-		"languages/tree-sitter-cpp/src/scanner.cc"
-		
-		"languages/tree-sitter-css/src/parser.c"
-		"languages/tree-sitter-css/src/scanner.c"
-		
-		"languages/tree-sitter-html/src/parser.c"
-		"languages/tree-sitter-html/src/scanner.cc"
-
-		"languages/tree-sitter-javascript/src/parser.c"
-		"languages/tree-sitter-javascript/src/scanner.c"
-
-		"languages/tree-sitter-json/src/parser.c")
