fuzz test for caret_set; better caret insertion algorithm

--- a/plugins/editors/test/CMakeLists.txt
+++ b/plugins/editors/test/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory("fuzz/buffer")
+add_subdirectory("fuzz/caret")
 add_subdirectory("fuzz/overlapping_range")
 
 add_subdirectory("unit/")
