--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -4,7 +4,8 @@ target_sources(codepad_test
 	PRIVATE
 		"src/main.cpp"
 		
-		"src/direct2d_renderer.cpp")
+		"src/direct2d_renderer.cpp"
+		"src/text.cpp")
 
 find_package(Catch2 CONFIG REQUIRED)
 target_link_libraries(codepad_test PRIVATE codepad_core Catch2::Catch2)
